--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@canvasjs/charts": "^3.7.8",
+    "@canvasjs/react-charts": "^1.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -15,10 +17,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^2.0.0-beta.7",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
+    "react-rounded-image": "^2.0.15",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "reactochart": "^6.1.1",
+    "victory": "^36.6.10",
+    "victory-core": "^36.6.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
